--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,8 @@
    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-      <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Noticia+Text|Noto+Sans:700" rel="stylesheet">
+      <!-- <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Noticia+Text|Noto+Sans:700" rel="stylesheet"> -->
+      <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Nobile:700|Noticia+Text|Noto+Sans:700" rel="stylesheet">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <!-- Compiled and minified CSS -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
