--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <!-- <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Noticia+Text|Noto+Sans:700" rel="stylesheet"> -->
       <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Nobile:700|Noticia+Text|Noto+Sans:700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <!-- Compiled and minified CSS -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
@@ -42,7 +43,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Suave</title>
   </head>
 
   <body>
