--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,7 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.3/css/bootstrap.min.css"
       rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Be+Vietnam|Ubuntu&display=swap" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.1.1/css/mdb.min.css" rel="stylesheet">
    
