--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,16 +19,16 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.3/css/bootstrap.min.css"
       rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Be+Vietnam|Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Be+Vietnam|Ubuntu&display=swap" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.1.1/css/mdb.min.css" rel="stylesheet">
-   
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-      <!-- <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Noticia+Text|Noto+Sans:700" rel="stylesheet"> -->
-      <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Nobile:700|Noticia+Text|Noto+Sans:700" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <!-- <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Noticia+Text|Noto+Sans:700" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Nobile:700|Noticia+Text|Noto+Sans:700"
+      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
 
 
     <!--
@@ -56,15 +56,96 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script>
-	function toggle_visibility(id) {
-       var e = document.getElementById(id);
-       if(e.style.display == 'block')
+      function toggle_visibility(id) {
+        var e = document.getElementById(id);
+        if (e.style.display == 'block')
           e.style.display = 'none';
-       else
+        else
           e.style.display = 'block';
-	}
-  </script>
+      }
+
+    </script>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"
+      integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script>
+
+    <script>
+      TweenMax.to(".bg", 2, {
+        width: "100%",
+        ease: Expo.easeInOut
+      })
+
+      // NAVBAR
+      TweenMax.from(".navbar", 1.5, {
+        delay: 2.5,
+        opacity: 0,
+        y: 20,
+        ease: Expo.easeInOut
+      })
+
+      // SOCIAL MEDIA
+      TweenMax.staggerFrom(".media ul li", 1.5, {
+        delay: 2.8,
+        opacity: 0,
+        x: -30,
+        ease: Expo.easeInOut
+      }, 0.08)
+
+      // TEXT
+      TweenMax.from(".text h1 .hidetext", 1.5, {
+        delay: 1.6,
+        y: "100%",
+        ease: Expo.easeInOut
+      })
+
+      TweenMax.from(".text p .hidetext", 1.5, {
+        delay: 2,
+        y: "100%",
+        ease: Expo.easeInOut
+      })
+
+      // DESC
+      TweenMax.staggerFrom(".desc ul li", 1.5, {
+        delay: 2,
+        opacity: 0,
+        y: 20,
+        ease: Expo.easeInOut
+      }, 0.1)
+
+      TweenMax.from(".desc p", 1.5, {
+        delay: 2.3,
+        opacity: 0,
+        y: 20,
+        ease: Expo.easeInOut
+      })
+
+      // SCROLLDOWN
+      TweenMax.from(".scrolldown", 1.5, {
+        delay: 2.7,
+        opacity: 0,
+        y: 200,
+        ease: Expo.easeInOut
+      })
+
+      // BOTTOMNAV
+      TweenMax.from(".bottomnav", 1.5, {
+        delay: 3.2,
+        opacity: 0,
+        y: 30,
+        ease: Expo.easeInOut
+      })
+
+      TweenMax.from(".bottomnav .next", 1.5, {
+        delay: 3.5,
+        opacity: 0,
+        x: -20,
+        ease: Expo.easeInOut
+      })
+    </script>
+
   </body>
 
 </html>
