--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,33 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta name="theme-color" content="#000000" />
-    <!--
-          manifest.json provides metadata used when your web app is installed on a
-          user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-        -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- Bootstrap core CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.3/css/bootstrap.min.css"
-      rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Be+Vietnam|Ubuntu&display=swap" rel="stylesheet">
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Be+Vietnam|Ubuntu&display=swap"
+      rel="stylesheet"
+    />
     <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.1.1/css/mdb.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Noticia+Text|Noto+Sans:700" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Nobile:700|Noticia+Text|Noto+Sans:700"
-      rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet">
+    <!-- <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.1.1/css/mdb.min.css"
+      rel="stylesheet"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Bungee+Inline|Nobile:700|Noticia+Text|Noto+Sans:700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Heebo"
+      rel="stylesheet"
+    />
+    <link
+      href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
+      rel="stylesheet"
+    />
     <title>Suave</title>
   </head>
 
@@ -36,94 +61,52 @@
     <div id="root"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script>
+      $(".toast").toast("show");
+      let chat = $(".chat");
+      chat.scrollTop(chat[0].scrollHeight);
+    </script>
+    <script>
       function toggle_visibility(id) {
         var e = document.getElementById(id);
-        if (e.style.display == 'block')
-          e.style.display = 'none';
-        else
-          e.style.display = 'block';
+        if (e.style.display == "block") e.style.display = "none";
+        else e.style.display = "block";
       }
-
     </script>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"
-      integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
     <script>
-      TweenMax.to(".bg", 2, {
-        width: "100%",
-        ease: Expo.easeInOut
-      })
-
-      // NAVBAR
-      TweenMax.from(".navbar", 1.5, {
-        delay: 2.5,
-        opacity: 0,
-        y: 20,
-        ease: Expo.easeInOut
-      })
-
-      // SOCIAL MEDIA
-      TweenMax.staggerFrom(".media ul li", 1.5, {
-        delay: 2.8,
-        opacity: 0,
-        x: -30,
-        ease: Expo.easeInOut
-      }, 0.08)
-
-      // TEXT
-      TweenMax.from(".text h1 .hidetext", 1.5, {
-        delay: 1.6,
-        y: "100%",
-        ease: Expo.easeInOut
-      })
-
-      TweenMax.from(".text p .hidetext", 1.5, {
-        delay: 2,
-        y: "100%",
-        ease: Expo.easeInOut
-      })
-
-      // DESC
-      TweenMax.staggerFrom(".desc ul li", 1.5, {
-        delay: 2,
-        opacity: 0,
-        y: 20,
-        ease: Expo.easeInOut
-      }, 0.1)
-
-      TweenMax.from(".desc p", 1.5, {
-        delay: 2.3,
-        opacity: 0,
-        y: 20,
-        ease: Expo.easeInOut
-      })
-
-      // SCROLLDOWN
-      TweenMax.from(".scrolldown", 1.5, {
-        delay: 2.7,
-        opacity: 0,
-        y: 200,
-        ease: Expo.easeInOut
-      })
-
-      // BOTTOMNAV
-      TweenMax.from(".bottomnav", 1.5, {
-        delay: 3.2,
-        opacity: 0,
-        y: 30,
-        ease: Expo.easeInOut
-      })
-
-      TweenMax.from(".bottomnav .next", 1.5, {
-        delay: 3.5,
-        opacity: 0,
-        x: -20,
-        ease: Expo.easeInOut
-      })
+      window._wq = window._wq || [];
+      _wq.push({
+        id: "x6qw5f9icn",
+        onReady: function(video) {
+          console.log("I got a handle to the video!", video);
+        }
+      });
+      $("#play").click(function() {
+        _wq.push({
+          id: "x6qw5f9icn",
+          onReady: function(video) {
+            video.play();
+            video.unmute();
+          }
+        });
+      });
     </script>
-
+    <script src="video-min.js"></script>
   </body>
-
 </html>
