--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,6 +35,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.1.1/css/mdb.min.css"
       rel="stylesheet"
     /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -108,5 +109,10 @@
       });
     </script>
     <script src="video-min.js"></script>
+    <script src="wow.min.js"></script>
+    <script>
+        new WOW().init();
+
+    </script>
   </body>
 </html>
